--- a/demo.css
+++ b/demo.css
@@ -16,20 +16,38 @@ body, input, select, textarea {
   font-size: 14px;
 }
 
-fieldset, .errors, .listing {
+fieldset, .errors, .listing, .categories {
   background: #fff;
   border: solid 1px #bbb;
   border-radius: 6px;
   padding: 12px 18px;
   margin: 12px 0px;
 }
-legend, .listing h1 {
+legend, .listing h1, .categories h1 {
   font-family: Lucida Grande;
   font-size: 20px;
   letter-spacing: -1px;
   color: #8C6B0B;
   font-weight: normal;
   margin: 0px;
+}
+.categories {
+  clear: both;
+}
+.categories h1 {
+  margin-right: 20px;
+  font-size: 18px;
+}
+.categories ul {
+  list-style-type: square;
+}
+.categories li {
+  line-height: 20px;
+}
+.search {
+  float: right;
+  margin-top: -40px;
+  margin-bottom: 5px;
 }
 
 /* generic forms */
