--- a/demo.css
+++ b/demo.css
@@ -67,10 +67,14 @@ label {
   font-weight: bold;
   font-size: 12px;
 }
-input, select, textarea {
+input[type=text], input[type=password], select, textarea {
   padding: 6px;
   border: inset 2px;
   width: 320px;
+}
+input[type=submit] {
+  margin-top: 15px;
+  font-size: 20px;
 }
 
 .errors {
@@ -119,7 +123,7 @@ input, select, textarea {
   padding: 4px 18px;
   position: relative;
 }
-.listing .edit-button {
+.listing .button {
   position: absolute;
   right: 0px;
   top: -45px;
@@ -166,7 +170,7 @@ input, select, textarea {
   margin: 10px 12px 0px 0px;
 }
 
-.edit-button {
+.button {
   background: #2639c9;
   background: -moz-linear-gradient(top, #2e43ee 0%, #2639c9 50%, #0017b5 50%, #001189 100%);
   background: -webkit-gradient(linear, 0 0, 0 100%, color-stop(0, #2e43ee), color-stop(0.5, #2939c6), color-stop(0.5, #0017b5), color-stop(1, #001189));
@@ -182,20 +186,21 @@ input, select, textarea {
   font-size: 14px;
   font-weight: bold;
   line-height: 1;
-  padding: 8px 0 10px 0;
+  padding: 8px 20px 10px 20px;
   text-align: center;
   text-shadow: 0px -1px 1px rgba(0, 0, 0, .8);
-  width: 80px;
+  min-width: 80px;
+  width: auto;
 }
 
-.edit-button:hover {
+.button:hover {
   background: #0005cb;
   background: -moz-linear-gradient(top, #7378f3 0%, #4d50db 50%, #0005cb 50%, #0106a2 100%);
   background: -webkit-gradient(linear, 0 0, 0 100%, color-stop(0, #7378f3), color-stop(0.5, #4d50db), color-stop(0.5, #0005cb), color-stop(1, #0106a2));
   cursor: pointer;
 }
 
-.edit-button:active {
+.button:active {
   background: #0003b3;
   background: -moz-linear-gradient(top, #283cd4 0%, #2432ad 50%, #00159c 50%, #000d70 100%);
   background: -webkit-gradient(linear, 0 0, 0 100%, color-stop(0, #283cd4), color-stop(0.5, #2432ad), color-stop(0.5, #00159c), color-stop(1, #000d70));
