--- a/demo.css
+++ b/demo.css
@@ -157,6 +157,12 @@ input[type=submit] {
   width: 100px;
 }
 
+p.warning {
+  color: #900;
+  font-weight: bold;
+  margin: 20px 0px 0px 0px;
+}
+
 .delete-toggle {
   background-color: #fff;
   background-image: url(delete.png);
@@ -183,7 +189,7 @@ input[type=submit] {
   box-shadow: inset 0px 0px 0px 1px rgba(100, 115, 255, 0.4), 0 1px 3px #333;
   color: #fff;
   font-family: "helvetica neue", helvetica, arial, sans-serif;
-  font-size: 14px;
+  font-size: 14px !important;
   font-weight: bold;
   line-height: 1;
   padding: 8px 20px 10px 20px;
@@ -222,13 +228,13 @@ input[type=submit] {
   box-shadow: inset 0px 0px 0px 1px rgba(255, 115, 100, 0.4), 0 1px 3px #333;
   color: #fff;
   font-family: "helvetica neue", helvetica, arial, sans-serif;
-  font-size: 14px;
+  font-size: 14px !important;
   font-weight: bold;
   line-height: 1;
-  padding: 8px 0 10px 0;
+  padding: 8px 20px 10px 20px;
   text-align: center;
   text-shadow: 0px -1px 1px rgba(0, 0, 0, .8);
-  width: 150px;
+  width: auto;
 }
 
 .delete-button:hover {
